hphp/test/quick/syntax-error.php.expectf

Fatal error: syntax error, unexpected $end in %s on line 2
